The name of the file downloaded from URL is not correct
git-svn-id: https://svn.apache.org/repos/asf/incubator/ooo/trunk@1386976 13f79535-47bb-0310-9956-ffa450edef68